
Features
--------

* Allow TcpOutput to re-establish the connection after a configurable number of
  successfully delivered messages.

* Added `git_clone_to_path` to the cmake build to allow git repos to be cloned
  into alternate locations; useful for relocating forks of Go packages into
  their original import paths.


0.10.0 (2015-??-??)
===================

Features
--------

* Added `set_hostname` option to UdpInput configuration (#1668).

* Added `linux_netdev` and `linux_netstat` decoders (#1712).

Bug Handling
------------

* Fixed race condition in InputRunner's default deliverer initialization.

* Set hostname correctly in the Graylog decoder (#1663).

* Add sample rate support for gauge type in StatsdInput.

* Fixed some cases where SandboxDecoder wasn't correctly setting
  `pack.TrustMsgBytes` to false when needed.

* Fixed broken queue rolling and added test.

* Force ElasticSearch index name to lower case, as required by ElasticSearch.

* Fixed default buffer config values.

* Updated docker configuration so docker build works again (#1634).

* Add generic json lua sandbox decoder (#1651).

* Fixed bug where a SandboxInput configured with a `ticker_interval` would
  get stuck in an infinite loop on shutdown (#1705).

* Fixed race condition in the BufferReader's queue file lookup code (#1639).

* Changes in StatAccumInput, FileOutput, TcpInput, ProcessDirectoryInput tests
  to minimize intermittent Travis failures.

* Ensure the response is read until it is complete in the HttpOutput plugin.
  Previously, the deferred Body.Close() may have been called on incomplete
  responses. This resulted in the connections not returning to the client's
  Transport connection pool.

* Fixed panic that was occurring when loading a config file or directory that
  exists but which registers no plugins (#1597).

0.10.0b1 (2015-08-07)
=====================

Backwards Incompatibilities
---------------------------
